--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="images/portfolio-icon-vector.jpg" type="image/x-icon">
     <title>Create Portfolio</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/36e9c7733a.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans">
     <header class=" header section-bg ">
@@ -28,7 +29,7 @@
                 <br> . Morning because as to society behaved moments.</p>
 
             <button onclick="showDownloadPopup()"class="btn-main">
-                 <img src="images/icons/9205302.png" class="btn-icon ">Download CV
+                 <i class="fa-solid fa-download"></i>Download CV
        </button>
                  <script>
     function showDownloadPopup() {
@@ -36,8 +37,7 @@
     }
   </script>
       <!-- Button -->
-<button onclick="showContactPopup()" class="btn-bg btn-main">
-  <img src="images/icons/contact icon.png" class="btn-icon" alt="">Contact
+<button onclick="showContactPopup()" class="btn-bg btn-main"> <i class="fa-solid fa-phone"></i>Contact
 </button>
 
 <script>
@@ -183,7 +183,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
     </div>
     <div class="btn-wrapper">
      <button onclick="showPopup()" class="btn-main ">
-                 <img src="images/icons/9205302.png" class="btn-icon ">Download CV</button>
+                   <i class="fa-solid fa-download"></i>Download CV</button>
                   <script>
     function showPopup() {
       alert("Download Cv");
